feat: Add working exercise count in rountines list
